tests/snapshots/e2e_semantic_blockquote__blockquote_nested_markdown_python_binary.snap
---
source: tests/e2e_semantic_blockquote.rs
expression: data
---
[
  0,
  0,
  2,
  1,
  0,
  0,
  2,
  6,
  2,
  0,
  0,
  6,
  8,
  17,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  0,
  3,
  6,
  17,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  1,
  17,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  5,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  3,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  5,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  3,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  1,
  17,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  5,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  4,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  8,
  2,
  0,
  0,
  8,
  1,
  5,
  0,
  0,
  1,
  3,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  3,
  2,
  0,
  1,
  0,
  2,
  1,
  0,
  0,
  2,
  6,
  2,
  0
]
