tests/snapshots/e2e_semantic_blockquote__blockquote_triple_nested_injection_binary.snap
---
source: tests/e2e_semantic_blockquote.rs
expression: data
---
[
  0,
  0,
  2,
  1,
  0,
  0,
  2,
  5,
  2,
  0,
  0,
  5,
  8,
  17,
  0,
  1,
  0,
  2,
  2,
  0,
  0,
  2,
  4,
  2,
  0,
  0,
  4,
  3,
  17,
  0,
  1,
  0,
  2,
  2,
  0,
  0,
  2,
  5,
  1,
  0,
  0,
  5,
  1,
  2,
  0,
  0,
  1,
  1,
  17,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  5,
  0,
  0,
  1,
  1,
  2,
  0,
  0,
  1,
  1,
  3,
  0,
  1,
  0,
  2,
  2,
  0,
  0,
  2,
  4,
  2,
  0,
  1,
  0,
  2,
  2,
  0,
  0,
  2,
  5,
  2,
  0
]
